--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,13 +4,13 @@ on:
   push:
     branches: [ main ]
     paths-ignore:
-    - '.github/**'
-    - 'examples/**'
+      - '.github/**'
+      - 'examples/**'
   pull_request:
     branches: [ main ]
     paths-ignore:
-    - '.github/**''
-    - 'examples/**'
+      - '.github/**'
+      - 'examples/**'
   workflow_dispatch:
 
 jobs:
@@ -22,12 +22,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [ 3.7, 3.8, 3.9, '3.10' ]
+        python-version: [ 3.8, 3.9, '3.10' ]
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
