--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,10 +33,11 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install poetry
           pip install flake8 pytest
           pip install pytest-cov
           pip install -r dev_requirements.txt
-
+          poetry install 
       - name: Lint with flake8
         run: |
           # stop the build if there are Python syntax errors or undefined names
