--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,13 +30,10 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install flake8 pytest
-          pip install pytest-cov
-          pip install -r dev_requirements.txt
-
+      - name: Install Python dependencies
+        uses: py-actions/py-dependency-install@v3
+        with:
+          path: "dev_requirements.txt"
       - name: Lint with flake8
         run: |
           # stop the build if there are Python syntax errors or undefined names
