fix(github): try a solution for the workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,9 @@ jobs:
         uses: py-actions/py-dependency-install@v3
         with:
           path: "dev_requirements.txt"
+      - name: Configure the environment
+        run: |
+          pip install -e .
       - name: Lint with flake8
         run: |
           # stop the build if there are Python syntax errors or undefined names
