ci(github): support python 3.8

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,3 +64,10 @@ max-line-length = 127
 
 [tool.isort]
 profile = "black"
+
+[tool.pytest.ini_options]
+minversion = "7.1"
+addopts = "-ra -q"
+testpaths = [
+    "tests",
+]
