--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Natural Language :: English",
     "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
@@ -29,7 +30,7 @@ include = [
 "Bug Tracker" = ""
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.7"
 restfly = "^1.4.6"
 
 [tool.poetry.dev-dependencies]
