--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,8 @@ pre-commit = "^2.19.0"
 responses = "^0.21.0"
 toml = "^0.10.2"
 pytest = "^7.1.2"
+black = "^22.6.0"
+flake8 = "^4.0.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
