--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ include = [
 [tool.poetry.dependencies]
 python = "^3.7"
 restfly = "^1.4.6"
+coverage = "^6.4.1"
 
 [tool.poetry.dev-dependencies]
 requests = "^2.28.0"
