--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,4 +1,4 @@
-name: "Build: Tests validation"
+name: "Flake8 and Coverage"
 
 on:
   push:
@@ -22,7 +22,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [ 3.7, 3.8, 3.9, '3.10' ]
+        python-version: [ '3.10' ]
 
     steps:
       - uses: actions/checkout@v3
@@ -37,6 +37,14 @@ jobs:
       - name: Configure the environment and additional libraries
         run: |
           pip install -e .
-      - name: Test with pytest
+      - name: Lint with flake8
         run: |
-          pytest
+          # stop the build if there are Python syntax errors or undefined names
+          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+      - name: Test with pytest and coverage which generate a report
+        run: |
+          coverage run -m pytest
+      - name: Upload Coverage to Codecov
+        uses: codecov/codecov-action@v3
