ci: change branches tests performed

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -2,12 +2,12 @@ name: "Flake8 and Coverage"
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, develop ]
     paths-ignore:
       - '.github/**'
       - 'examples/**'
   pull_request:
-    branches: [ main ]
+    branches: [ main, develop ]
     paths-ignore:
       - '.github/**'
       - 'examples/**'
