--- a/.github/workflows/build_by_version.yml
+++ b/.github/workflows/build_by_version.yml
@@ -2,12 +2,12 @@ name: "Build: Tests validation"
 
 on:
   push:
-    branches: [ main ]
+    branches: [ develop ]
     paths-ignore:
       - '.github/**'
       - 'examples/**'
   pull_request:
-    branches: [ main ]
+    branches: [ develop ]
     paths-ignore:
       - '.github/**'
       - 'examples/**'
