--- a/.github/workflows/build_by_version.yml
+++ b/.github/workflows/build_by_version.yml
@@ -30,6 +30,9 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python-version }}
+      - name: Configure additional libraries
+        run: |
+          pip install flake8
       - name: Install Python dependencies
         uses: py-actions/py-dependency-install@v3
         with:
