--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,9 +43,9 @@ responses = "^0.21.0"
 toml = "^0.10.2"
 pytest = "^7.1.2"
 black = "^22.6.0"
-flake8 = "^4.0.1"
 isort = "^5.10.1"
 coverage = "^6.4.2"
+Sphinx = "^5.0.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
