--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ black = "^22.6.0"
 isort = "^5.10.1"
 coverage = "^6.4.2"
 Sphinx = "^5.0.2"
+furo = "^2022.6.21"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
