--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ isort = "^5.10.1"
 coverage = "^6.4.2"
 Sphinx = "^5.0.2"
 furo = "^2022.6.21"
+enum-tools = {extras = ["sphinx"], version = "^0.9.0"}
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
