--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ coverage = "^6.4.2"
 Sphinx = "^5.0.2"
 furo = "^2022.6.21"
 enum-tools = {extras = ["sphinx"], version = "^0.9.0"}
+sphinx-autodoc-typehints = "^1.18.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
