--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ apeye==1.2.0; python_version >= "3.7" and python_full_version >= "3.6.1"
 arrow==1.2.2; python_version >= "3.6"
 autodocsumm==0.2.6; python_version >= "3.7"
 babel==2.10.3; python_version >= "3.7"
-beautifulsoup4==4.11.1; python_version >= "3.7" and python_full_version >= "3.6.0"
+beautifulsoup4==4.11.1; python_full_version >= "3.6.0" and python_version >= "3.7"
 cachecontrol==0.12.11; python_version >= "3.7"
 certifi==2022.6.15; python_version >= "3.7" and python_version < "4"
 charset-normalizer==2.1.0; python_version >= "3.7" and python_version < "4" and python_full_version >= "3.6.0"
@@ -13,6 +13,7 @@ dict2css==0.3.0; python_version >= "3.7"
 docutils==0.17.1; python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "4.0" or python_version >= "3.7" and python_full_version >= "3.5.0" and python_version < "4.0"
 domdf-python-tools==3.3.0; python_version >= "3.7" and python_full_version >= "3.6.1"
 enum-tools==0.9.0.post1; python_version >= "3.6"
+furo==2022.6.21; python_version >= "3.7"
 html5lib==1.1; python_version >= "3.7" and python_full_version < "3.0.0" or python_version >= "3.7" and python_full_version >= "3.5.0"
 idna==3.3; python_version >= "3.7" and python_version < "4" and python_full_version >= "3.6.1"
 imagesize==1.4.1; python_version >= "3.7" and python_full_version < "3.0.0" or python_version >= "3.7" and python_full_version >= "3.4.0"
@@ -36,8 +37,9 @@ ruamel.yaml.clib==0.2.6; platform_python_implementation == "CPython" and python_
 ruamel.yaml==0.17.21; python_version >= "3.7"
 six==1.16.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
 snowballstemmer==2.2.0; python_version >= "3.7"
-soupsieve==2.3.2.post1; python_version >= "3.7" and python_full_version >= "3.6.0"
+soupsieve==2.3.2.post1; python_full_version >= "3.6.0" and python_version >= "3.7"
 sphinx-autodoc-typehints==1.18.3; python_version >= "3.7"
+sphinx-basic-ng==0.0.1a12; python_version >= "3.7"
 sphinx-jinja2-compat==0.1.2; python_version >= "3.7"
 sphinx-prompt==1.5.0; python_version >= "3.7"
 sphinx-tabs==3.4.0; python_version >= "3.7" and python_version < "4.0"
