--- a/requirements.txt
+++ b/requirements.txt
@@ -1,59 +1,11 @@
-alabaster==0.7.12; python_version >= "3.7"
-apeye==1.2.0; python_version >= "3.7" and python_full_version >= "3.6.1"
 arrow==1.2.2; python_version >= "3.6"
-autodocsumm==0.2.6; python_version >= "3.7"
-babel==2.10.3; python_version >= "3.7"
-beautifulsoup4==4.11.1; python_full_version >= "3.6.0" and python_version >= "3.7"
-cachecontrol==0.12.11; python_version >= "3.7"
 certifi==2022.6.15; python_version >= "3.7" and python_version < "4"
 charset-normalizer==2.1.0; python_version >= "3.7" and python_version < "4" and python_full_version >= "3.6.0"
-colorama==0.4.5; python_version >= "3.7" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.7" and python_full_version >= "3.5.0"
-cssutils==2.5.0; python_version >= "3.7"
-dict2css==0.3.0; python_version >= "3.7"
-docutils==0.17.1; python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "4.0" or python_version >= "3.7" and python_full_version >= "3.5.0" and python_version < "4.0"
-domdf-python-tools==3.3.0; python_version >= "3.7" and python_full_version >= "3.6.1"
-enum-tools==0.9.0.post1; python_version >= "3.6"
-furo==2022.6.21; python_version >= "3.7"
-html5lib==1.1; python_version >= "3.7" and python_full_version < "3.0.0" or python_version >= "3.7" and python_full_version >= "3.5.0"
-idna==3.3; python_version >= "3.7" and python_version < "4" and python_full_version >= "3.6.1"
-imagesize==1.4.1; python_version >= "3.7" and python_full_version < "3.0.0" or python_version >= "3.7" and python_full_version >= "3.4.0"
-importlib-metadata==4.12.0; python_version < "3.8" and python_version >= "3.7" and python_full_version >= "3.6.1"
-jinja2==3.0.3; python_version >= "3.7" and python_version < "4.0"
-lockfile==0.12.2
-markupsafe==2.1.1; python_version >= "3.7"
-msgpack==1.0.4; python_version >= "3.7"
-mypy-extensions==0.4.3; python_version >= "3.7" and python_version < "3.8"
-natsort==8.1.0; python_version >= "3.7" and python_full_version >= "3.6.1"
-packaging==21.3; python_version >= "3.7"
-platformdirs==2.5.2; python_version >= "3.7" and python_full_version >= "3.6.1"
-pygments==2.12.0; python_version >= "3.7" and python_version < "4.0"
-pyparsing==3.0.9; python_version >= "3.7" and python_full_version >= "3.6.8"
+idna==3.3; python_version >= "3.7" and python_version < "4"
 python-box==6.0.2; python_version >= "3.6"
 python-dateutil==2.8.2; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.6"
-pytz==2022.1; python_version >= "3.7"
 requests==2.28.1; python_version >= "3.7" and python_version < "4"
 restfly==1.4.6
-ruamel.yaml.clib==0.2.6; platform_python_implementation == "CPython" and python_version < "3.11" and python_version >= "3.7"
-ruamel.yaml==0.17.21; python_version >= "3.7"
-six==1.16.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
-snowballstemmer==2.2.0; python_version >= "3.7"
-soupsieve==2.3.2.post1; python_full_version >= "3.6.0" and python_version >= "3.7"
-sphinx-autodoc-typehints==1.18.3; python_version >= "3.7"
-sphinx-basic-ng==0.0.1a12; python_version >= "3.7"
-sphinx-jinja2-compat==0.1.2; python_version >= "3.7"
-sphinx-prompt==1.5.0; python_version >= "3.7"
-sphinx-tabs==3.4.0; python_version >= "3.7" and python_version < "4.0"
-sphinx-toolbox==3.1.2; python_version >= "3.7"
-sphinx==5.0.2; python_version >= "3.6"
-sphinxcontrib-applehelp==1.0.2; python_version >= "3.7"
-sphinxcontrib-devhelp==1.0.2; python_version >= "3.7"
-sphinxcontrib-htmlhelp==2.0.0; python_version >= "3.7"
-sphinxcontrib-jsmath==1.0.1; python_version >= "3.7"
-sphinxcontrib-qthelp==1.0.3; python_version >= "3.7"
-sphinxcontrib-serializinghtml==1.1.5; python_version >= "3.7"
-tabulate==0.8.10; python_version >= "3.7" and python_full_version < "3.0.0" or python_version >= "3.7" and python_full_version >= "3.5.0"
-typing-extensions==4.3.0; python_version < "3.8" and python_version >= "3.7" and python_full_version >= "3.6.1"
-typing-inspect==0.7.1; python_version >= "3.7" and python_version < "3.8"
+six==1.16.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.6"
+typing-extensions==4.3.0; python_version < "3.8" and python_version >= "3.7"
 urllib3==1.26.10; python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "4" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.7"
-webencodings==0.5.1; python_version >= "3.7" and python_full_version < "3.0.0" or python_version >= "3.7" and python_full_version >= "3.5.0"
-zipp==3.8.1; python_version < "3.10" and python_version >= "3.7"
