docs: updating main page for documentation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,4 +14,5 @@
     ],
     "python.terminal.activateEnvInCurrentTerminal": true,
     "autoDocstring.docstringFormat": "google",
+    "esbonio.sphinx.confDir": "",
 }
